Adds more configurations